fix(*): blue highlight in buttons on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,8 @@ button {
   outline: none;
   cursor: pointer;
   transition: .5s;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
 
   &:disabled {
     cursor: initial;
